# oncall-scheduler

./: pyproject.toml
app/: config_handler.py  init.py
app/modules/: schedule.py
app/templates/: base.html.j2  index.html.j2
